# AI_Waiver

./: .env.template  .gitignore  README.md
ASR_Module/: mic.py  (+3 more)
robot_ws/src/ai_waiter_core/: README.md  main.py  package.xml  requirements.txt  setup.py
robot_ws/src/ai_waiter_core/ai_waiter_core/agent/: __init__.py  agent.py  graph.py  prompts.py  router.py  state.py
robot_ws/src/ai_waiter_core/ai_waiter_core/agent/memory/: checkpointer.py
robot_ws/src/ai_waiter_core/ai_waiter_core/agent/nodes/: __init__.py  chat_worker_node.py  critic_node.py  deterministic_validator_node.py  hybrid_router_node.py  menu_worker_node.py  order_worker_node.py  payment_worker_node.py  semantic_router_node.py  slm_router_node.py
robot_ws/src/ai_waiter_core/ai_waiter_core/agent/tools/: __init__.py
robot_ws/src/ai_waiter_core/ai_waiter_core/config/: __init__.py  agent_config.py  base_settings.py  database_config.py  hardware_config.py
robot_ws/src/ai_waiter_core/ai_waiter_core/core/: config.py
robot_ws/src/ai_waiter_core/ai_waiter_core/orchestrator/: agent.py  memory.py  prompts.py
robot_ws/src/ai_waiter_core/ai_waiter_core/schemas/: __init__.py  menu_registry.py  order.py  reflection.py  routing.py
robot_ws/src/ai_waiter_core/ai_waiter_core/tools/: __init__.py  confirm_order_tool.py  order.py  payment_tool.py  pending_order.py  search_hybrid.py  search_tool.py  utils.py
robot_ws/src/ai_waiter_core/ai_waiter_core/utils/: __init__.py  logger.py  prompt_utils.py  tracing.py
robot_ws/src/ai_waiter_core/tests/: test_agent.py  test_modular_retriever.py  test_search_hybrid.py
(+200 files in other folders)
